# pico-FreeRTOS-base

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  pico-rtos.cpp
